# asimovo_docs

./: README.md
cylinder_description/: CMakeLists.txt  model.sdf  package.xml
cylinder_description/gazebo_model/: model.config
cylinder_description/gazebo_model/cylinder_model/: model.config
cylinder_description/launch/: spawn_cylinder.launch
ros2_models/cylinder_description/: CMakeLists.txt  package.xml
ros2_models/cylinder_description/gazebo_model/cylinder_model/: model.sdf
ros2_models/cylinder_description/launch/: spawn_cylinder.launch.py
ros2_models/my_robot_description/: .clearpath_husky_chassis.dae.swp  CMakeLists.txt  package.xml
ros2_models/my_robot_description/launch/: spawn_my_robot.launch.py  spawn_my_robot.py
ros2_models/my_robot_description/meshes/: clearpath_husky_chassis.dae
ros2_models/my_robot_description/urdf/: my_robot.gazebo  my_robot.xacro  wheel.xacro
ros2_models/raptor_description/: CMakeLists.txt  package.xml
ros2_models/raptor_description/gazebo_model/raptor_model/: model.config  model.sdf
ros2_models/raptor_description/launch/: spawn_raptor.launch.py
