<?xml version="1.0"?>
<package format="2">
  <name>raptor_description</name>
  <version>0.0.0</version>
  <description>3D model of a raptor. The license file is inside the meshes folder as downloaded from thingiverse.com </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="reka@dobots.nl">Reka Berci-Hajnovics</maintainer>
 

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


 <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>gazebo_dev</build_depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/gazebo_model/raptor_model/meshes"/>
  </export>
</package>
